--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "dependencies": {
     "express": "~4.5.1",
     "body-parser": "~1.4.2",
-    "bower": "latest"
+    "bower": "latest",
+    "mongoose"   : "~4.1.12",
+    "mongodb-uri": "~0.9.7"
   },
   "scripts": {
   	"start" : "node server.js",
